force-app/main/default/objects/Stock__c/fields/Investment_date__c.field-meta.xml
<CustomField>
    <fullName>Investment_date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment date</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Price__c.Stock__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Price__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>