force-app/main/default/objects/Stock__c/listViews/List.listView-meta.xml
<ListView>
    <fullName>List</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>List</label>
</ListView>