force-app/main/default/objects/Stock__c/listViews/To_Do.listView-meta.xml
<ListView>
    <fullName>To_Do</fullName>
    <columns>NAME</columns>
    <columns>Investment__c</columns>
    <columns>Investment_date__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_date__c</field>
        <operation>equals</operation>
    </filters>
    <label>To-Do</label>
</ListView>